--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="../ReadmeResources/Portfolio-Figma.png">
+    <meta property="og:image" content="https://imgur.com/a/1cAgvkr">
     <title>Siu Kei's Portfolio</title>
   </head>
   <body className="has-navbar-fixed-top">
